@@ -8,6 +8,9 @@ Mod(3, 7)
 0
 0
 2
+Mod(0, 2)
+Mod(0, 2)
+Mod(1, 2)
 [0, 0]
 [0, x]
 [0, y]
@@ -38,4 +41,4 @@ Mod(3, 7)
 [-x + y, x]
 [z - x, z]
 [z + (-x + 1), z]
-Total time spent: 1
+Total time spent: 0
