@@ -10,6 +10,12 @@ Mod(0, 3)
   ***                 ^--------------------
   *** subst: impossible inverse in gsubst: Mod(0, 3).
 Mod(2, 3)
+Mod(0, 3)
+
+[Mod(0, 3)         0]
+
+[        0 Mod(0, 3)]
+
 -1/-y
 Mod(y*x, y^2*x^2 + 1)
 y*x/(y^2*x^2 + 1)
@@ -28,4 +34,4 @@ x + O(x^2)
   *** substpol: domain error in gdeflate: valuation(x) % 2 != 0
 1
 (y + 1) + (y + 1)*x + O(x^2)
-Total time spent: 4
+Total time spent: 0
