@@ -9,6 +9,9 @@ polinterpolate([1,2,4], [2,3,4], 1.5, &e); e
 polinterpolate([1,2],[0,0])
 polinterpolate([],[])
 polinterpolate([1],[2])
+polinterpolate([],[],Mod(1,2))
+polinterpolate([0],[0],Mod(1,2))
+polinterpolate([1],[1],Mod(1,2))
 
 z = varhigher("z", x);  \\ so variable ordering is z < x < y
 test(a,b,v) = my(f = polinterpolate(a,b,v)); [f, variable(f)];
