@@ -11,6 +11,10 @@ subst(x+O(x^2),x,Mod(1,3))
 subst(x+O(x^2),x,Mod(0,3))
 subst(1/x+O(x^2),x,Mod(0,3))
 subst(2+x+O(x^2),x,Mod(0,3))
+subst(Pol(0),x,Mod(1,3))
+subst(Pol(0),x,Mod(1,3)*matid(2))
+subst(Pol(1),x,Mod(1,3))
+subst(Pol(1),x,Mod(1,3)*matid(2))
 
 substpol(x,1/x,y)
 substpol(Mod(x*y^2, y^3*x^2+1), y^2,y)
